--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ license = "MIT"
 python = "^3.10"
 requests = "^2.28.1"
 slack-sdk = "^3.18.1"
+termcolor = "^1.1.0"
+beautifulsoup4 = "^4.11.1"
 
 [tool.poetry.dev-dependencies]
 
