--- a/manifests/makuake.yaml
+++ b/manifests/makuake.yaml
@@ -12,14 +12,14 @@ spec:
         spec:
           containers:
           - name: boardgame
-            image: ghcr.io/skyblue3350/cronjobs:master
+            image: ghcr.io/skyblue3350/cronjobs:main
             command:
             - python
             - makuake.py
             env:
             - name: SLACK_USERNAME
               value: makuake
-            - name: SLACK_ICON
+            - name: SLACK_USER_ICON
               value: makuake
             envFrom:
             - secretRef:
