--- a/manifests/seven-net.yaml
+++ b/manifests/seven-net.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: cronjob
 spec:
   # 5分ごとに実行する
-  schedule: "5 * * * *"
+  schedule: "*/5 * * * *"
   jobTemplate:
     spec:
       template:
