--- a/manifests/seven-net.yaml
+++ b/manifests/seven-net.yaml
@@ -21,7 +21,7 @@ spec:
             - name: TZ
               value: Asia/Tokyo
             - name: TARGET_PAGES
-              value: 1400847289,1400847288,1400847287
+              value: "1400847289"
             envFrom:
             - secretRef:
                 name: discord-atom
