--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ requests = "^2.28.1"
 slack-sdk = "^3.18.1"
 termcolor = "^1.1.0"
 beautifulsoup4 = "^4.11.1"
+jpholiday = "^0.1.8"
+python-dateutil = "^2.8.2"
 
 [tool.poetry.dev-dependencies]
 
